Hotfixing style issue on mobile devices - removing redundant advice

--- a/css/style.css
+++ b/css/style.css
@@ -67,21 +67,4 @@ only screen and (max-width: 760px),
 	    td:nth-of-type(2):before { content: "Drink"; font-weight: bold;}
 	    td:nth-of-type(3):before { content: "Milk"; font-weight: bold;}
       td:nth-of-type(4):before { content: "Sugar(s)"; font-weight: bold;}
-
 }
-/* Smartphones (portrait and landscape) ----------- */
-	@media only screen
-	and (min-device-width : 320px)
-	and (max-device-width : 480px) {
-		body {
-			padding: 0;
-			margin: 0;
-			width: 320px; }
-		}
-
-	/* iPads (portrait and landscape) ----------- */
-	@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-		body {
-			width: 495px;
-		}
-	}
